Made changes in home page and restricted the number of travellers per booking

--- a/views/partials/user-footer.hbs
+++ b/views/partials/user-footer.hbs
@@ -47,10 +47,10 @@
       <div class="col-sm-6 col-12">
         <!-- Social Icons -->
         <ul class="social-media-icons text-right">
-          <li><a class="fa fa-facebook" href="https://www.facebook.com/themefisher" target="_blank"></a></li>
-          <li><a class="fa fa-twitter" href="https://www.twitter.com/themefisher" target="_blank"></a></li>
-          <li><a class="fa fa-pinterest-p" href="https://www.pinterest.com/themefisher" target="_blank"></a></li>
-          <li><a class="fa fa-vimeo" href=""></a></li>
+          <li><a class="fa fa-facebook" href="#" target="_blank"></a></li>
+          <li><a class="fa fa-twitter" href="#" target="_blank"></a></li>
+          <li><a class="fa fa-pinterest-p" href="#" target="_blank"></a></li>
+          <li><a class="fa fa-vimeo" href="#"></a></li>
         </ul>
       </div>
     </div>
