--- a/views/user/user-view-packages.hbs
+++ b/views/user/user-view-packages.hbs
@@ -23,22 +23,22 @@
               <h2>Popular Destinations</h2>
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="category.html" class="popularDestination"></i>
+                  <a href="#" class="popularDestination"></i>
                     {{this.list1}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="category.html" class="popularDestination"></i>
+                  <a href="#" class="popularDestination"></i>
                     {{this.list2}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="category.html" class="popularDestination">{{this.list3}}</a>
+                  <a href="#" class="popularDestination">{{this.list3}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="category.html" class="popularDestination">
+                  <a href="#" class="popularDestination">
                     {{this.list4}} </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="category.html" class="popularDestination">
+                  <a href="#" class="popularDestination">
                     {{this.list5}}</a>
                 </li>
               </ul>
@@ -177,7 +177,7 @@
           <div class="content-holder">
             <h2>Want to ask us something?</h2>
             <ul class="list-inline mt-30">
-              <li class="list-inline-item"><a class="btn btn-main" href="ad-listing.html">Connect with us</a></li>
+              <li class="list-inline-item"><a class="btn btn-main" href="#">Connect with us</a></li>
             </ul>
           </div>
         </div>
