--- a/views/user/searchResults.hbs
+++ b/views/user/searchResults.hbs
@@ -5,40 +5,48 @@
 <div style="overflow-x:hidden !important">
 
     <section class="hero-area bg-1 text-center overly">
+        {{#each banner}}
+        {{#if this.status}}
+        <img  src="/banner-images/{{this._id}}.jpg" alt="" class="main-bg-img my-auto">
+        {{/if}}
+        {{/each}}
         <!-- Container Start -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-12">
                     <!-- Header Contetnt -->
+                    {{#each banner}}
+                    {{#if this.status}}
                     <div class="content-block">
-                        <h1 class="hero-header">Discover</h1>
-                        <h2 class="sub-hero-header text-white">the world!</h2>
+                        <h1 class="hero-header">{{this.mainTitle}}</h1>
+                        <h2 class="sub-hero-header text-white">{{this.subTitle}}</h2>
                         <div class="short-popular-category-list text-center">
                             <h2>Popular Destinations</h2>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="category.html" class="popularDestination"></i>
-                                        Goa </a>
+                                    <a href="#" class="popularDestination"></i>
+                                        {{this.list1}}</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="category.html" class="popularDestination"></i>
-                                        Manali</a>
+                                    <a href="#" class="popularDestination"></i>
+                                        {{this.list2}}</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="category.html" class="popularDestination"> Bali</a>
+                                    <a href="#" class="popularDestination">{{this.list3}}</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="category.html" class="popularDestination">
-                                        Shimla</a>
+                                    <a href="#" class="popularDestination">
+                                        {{this.list4}}</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="category.html" class="popularDestination">
-                                        Andaman</a>
+                                    <a href="#" class="popularDestination">
+                                        {{this.list5}}</a>
                                 </li>
                             </ul>
                         </div>
-
                     </div>
+                    {{/if}}
+                    {{/each}}
                     <!-- Advance Search -->
                     <div class="advance-search">
                         <div class="container">
@@ -77,11 +85,11 @@
 
 
 
-        <div class="row ml-5">
+        <div class="row mr-2">
             <!-- offer 01 -->
             {{#if searchResult }}
             {{#each searchResult}}
-            <div class="col-lg-3 offset-lg-0 col-md-5 offset-md-1 col-sm-5 col-10 ml-4 ">
+            <div class="col-lg-3 offset-lg-0 col-md-5 offset-md-1 col-sm-5 col-10 mx-auto ">
                 <!-- product card -->
                 <div class="product-item bg-light">
                     <div class="card " style="width:22rem;height:28rem;">
@@ -139,7 +147,7 @@
             {{else}}
             <div class="container mr-5 pr-5">
 
-                <h2 class="ml-5 pl-5">Sorry........!!!!! Couldn't Find any results</h2>
+                <h2 class="ml-auto" style="color:white ;text-align:center">Sorry........!!!!! Couldn't Find any results</h2>
             </div>
             {{/if}}
         </div>
@@ -161,7 +169,7 @@
                     <div class="content-holder">
                         <h2>Want to ask us something?</h2>
                         <ul class="list-inline mt-30">
-                            <li class="list-inline-item"><a class="btn btn-main" href="ad-listing.html">Connect with
+                            <li class="list-inline-item"><a class="btn btn-main" href="#">Connect with
                                     us</a>
                             </li>
                         </ul>
