added lazyload facility and changed update operation

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -149,6 +149,7 @@
   <script src="/plugins/fancybox/jquery.fancybox.pack.js"></script>
   <script src="/plugins/smoothscroll/SmoothScroll.min.js"></script>
   <script src="/js/script.js"></script>
+  <script src="/js/lazysizes.min.js" async=""></script>
 </body>
 
 </html>
