added lazyload for profile image

--- a/views/user/my-profile.hbs
+++ b/views/user/my-profile.hbs
@@ -12,7 +12,7 @@
 					<div class="widget user">
 						<!-- User Image -->
 						<div class="image d-flex justify-content-center">
-							<img src="/profile-images/{{user._id}}.jpg" alt="" class="">
+							<img data-src="/profile-images/{{user._id}}.jpg" alt="" class="lazyload">
 						</div>
 						<!-- User Name -->
 						<h5 class="text-center">{{user.Name}}</h5>
