--- a/views/user/user-view-packages.hbs
+++ b/views/user/user-view-packages.hbs
@@ -23,22 +23,22 @@
               <h2>Popular Destinations</h2>
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="#" class="popularDestination"></i>
+                  <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold"></i>
                     {{this.list1}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" class="popularDestination"></i>
+                  <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold"></i>
                     {{this.list2}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" class="popularDestination">{{this.list3}}</a>
+                  <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold">{{this.list3}}</a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" class="popularDestination">
+                  <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold">
                     {{this.list4}} </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#" class="popularDestination">
+                  <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold">
                     {{this.list5}}</a>
                 </li>
               </ul>
