--- a/views/user/user-view-packages.hbs
+++ b/views/user/user-view-packages.hbs
@@ -20,8 +20,8 @@
             <h1 class="hero-header">{{this.mainTitle}}</h1>
             <h2 class="sub-hero-header text-white">{{this.subTitle}}</h2>
             <div class="short-popular-category-list text-center">
-              <h2 class="mt-5">Popular Destinations</h2>
-              <ul class="list-inline mt-5">
+              <h2 class="">Popular Destinations</h2>
+              <ul class="list-inline ">
                 <li class="list-inline-item">
                   <a href="#" style="color: white;border:none;font-size:17px;font-weight:bold"></i>
                     {{this.list1}}</a>
