added expired packages,made design changes

--- a/views/admin/add-banners.hbs
+++ b/views/admin/add-banners.hbs
@@ -1,10 +1,11 @@
 {{>admin-side-top}}
 <section class="ml-5 mt-5 pl-5">
+  
   <div class="container-fluid mt-4 ml-5 pl-5">
     <div class="add-product-top ml-5 pl-5">
       <div class="row">
         <div class="col-md-10">
-          <h2 class="text-center add-product-headding">Add Banner</h2>
+          <h2 class="text-center add-product-headding" style="font-weight:bold ;">Add Banner</h2>
           <form action="/admin/add-banners" method="post" enctype="multipart/form-data" id="bannerPage">
             <label for="">Banner Name</label><br>
             <input type="text" name="bannerTitle" class="form-control" placeholder="Enter the Banner Name" style="border:1px solid black ;" /><br>
