--- a/views/admin/add-categories.hbs
+++ b/views/admin/add-categories.hbs
@@ -1,7 +1,9 @@
 {{>admin-side-top}}
-<div class="container ml-5">
-    <div class="row pt-5 ml-5">
-        <div class="col-md-6 pt-5 ml-5">
+
+<div class="container">
+    <h2 style="text-align:center;font-weight:bold" class="mt-4">Add Category</h2>
+    <div class="row pt-5 ">
+        <div class="col-md-6 pt-5 "style="margin-left:435px">
             <form action="/admin/add-category" method="post" id="add-category" >
                 <label for="category">Category Name</label><br>
                 <input type="text" name="Category">
