--- a/views/admin/add-packages.hbs
+++ b/views/admin/add-packages.hbs
@@ -1,10 +1,11 @@
 {{>admin-side-top}}
 
 <section class="add-packages">
+   <h2 style="text-align:center;font-weight:bold" class="mt-4">Add Packages</h2>
   <div class="container py-auto pl-auto">
     <div class="row mt-4 py-auto">
       <div class="col-md-6 mt-5">
-
+       
         <form action="/admin/add-packages" enctype="multipart/form-data" method="post" id="add-package">
           <label for="">Name</label>
           <input type="text" style="width:200px;border:1px solid black" name="Name" class="form-control">
