--- a/views/admin/edit-packages.hbs
+++ b/views/admin/edit-packages.hbs
@@ -1,6 +1,7 @@
 {{>admin-side-top}}
 <!-- Page Content  -->
 <section class="edit-packages">
+   <h2 style="text-align:center;font-weight:bold" class="mt-4">Edit Packages</h2>
     <div class="container pt-5">
         <div class="row mt-4">
             <div class="col-md-6 mt-5">
