--- a/views/admin/packageOffer-add.hbs
+++ b/views/admin/packageOffer-add.hbs
@@ -4,7 +4,7 @@
     <div class="add-product-top">
       <div class="row">
         <div class="col-md-10">
-          <h2 class="text-center add-product-headding">Add Product Offer</h2>
+          <h2 class="text-center add-product-headding" style="font-weight: bold;">Add Product Offer</h2>
           <form action="/admin/packageOffers-add" method="post" enctype="multipart/form-data" id="productPage">
 
             <label for="">Packages</label><br>
