--- a/views/admin/view-banners.hbs
+++ b/views/admin/view-banners.hbs
@@ -1,5 +1,6 @@
 {{>admin-side-top}}
 <section class="ml-3 mt-5  pt-5" >
+     <h2 style="text-align:center;font-weight:bold" class="mt-4">All Banners</h2>
     <div class="container ml-5 mt-4 ">
         <div class="row mt-4">
             <a href="/admin/add-banners" class="d-grid btn btn-success col-2 ms-auto mb-5">Add Banner</a>
