--- a/views/admin/view-bookings.hbs
+++ b/views/admin/view-bookings.hbs
@@ -1,6 +1,7 @@
 {{>admin-side-top}}
 <!-- Page Content  -->
 <section class="mt-3 ml-5">
+     <h2 style="text-align:center;font-weight:bold" class="mt-4">All Bookings</h2>
     <div class="container ">
         <div class="table-responsive">
             <table class="table mt-5 table-dark" id="my-table">
