--- a/views/admin/view-categories.hbs
+++ b/views/admin/view-categories.hbs
@@ -1,5 +1,6 @@
 {{>admin-side-top}}
 <section class="ml-5 mt-5 pl-5 pt-5" >
+   <h2 style="text-align:center;font-weight:bold" class="mt-4">Categories</h2>
         <div class="container ml-5 mt-4 ">
           <div class="row mt-4">
             <a href="/admin/add-category" class="btn btn-success mr-auto mb-4">Add
