--- a/views/partials/admin-side-top.hbs
+++ b/views/partials/admin-side-top.hbs
@@ -35,6 +35,10 @@
 
             <a href="/admin/admin-login">Package Management</a>
           </li>
+          <li>
+
+            <a href="/admin/expired-packages">Expired Packages</a>
+          </li>
            <li>
 
             <a href="/admin/view-banners">Banner Management</a>
