--- a/views/admin/add-coupons.hbs
+++ b/views/admin/add-coupons.hbs
@@ -1,11 +1,12 @@
 {{>admin-side-top}}
 <section class="ml-5 mt-5 pl-5">
+ 
   <div class="container-fluid mt-4 ml-5 pl-5">
     <div class="add-product-top ml-5 pl-5">
       <div class="row">
-        <div class="col-md-10">
-          <h2 class="text-center add-product-headding">Add Coupon</h2>
-          <form action="/admin/add-coupons" method="post" enctype="multipart/form-data" id="couponPage">
+        <div class="col-md-10" >
+          <h2 class="text-center add-product-headding" style="font-weight: bold;">Add Coupon</h2>
+          <form action="/admin/add-coupons" method="post"  enctype="multipart/form-data" id="couponPage">
 
             <label for="">Coupon code</label><br>
             <input type="text" name="couponCode" class="form-control" placeholder="Enter the coupon code" /><br>
