--- a/views/admin/packageOffer-view.hbs
+++ b/views/admin/packageOffer-view.hbs
@@ -1,6 +1,7 @@
 {{>admin-side-top}}
 <!-- Page Content  -->
 <section class="ml-5 mt-3">
+     <h2 style="text-align:center;font-weight:bold" class="mt-4">Package Offers</h2>
     <div class="container ml-5 mt-5">
         <div class="row mt-4">
             <a href="/admin/packageOffer-add" class="btn btn-success ml-auto  mb-4 ">Add
