--- a/views/admin/view-user.hbs
+++ b/views/admin/view-user.hbs
@@ -1,5 +1,6 @@
 {{>admin-side-top}}
 <section class="ml-5 mt-5 pl-5 pt-5" >
+     <h2 style="text-align:center;font-weight:bold" class="mt-4">Users</h2>
     <div class="container ml-5 mt-4 ">
         <table class="table mt-5 ml-3 table-dark table-hover" id="my-table">
             <thead >
