changed checkout page,minor design changes

--- a/views/admin/view-bookings.hbs
+++ b/views/admin/view-bookings.hbs
@@ -11,6 +11,7 @@
                         <th scope="col">Package Name</th>
                         <th scope="col">Travellers</th>
                         <th scope="col">Total Amount</th>
+                        <th scope="col">Travel Date</th>
                         <th scope="col">Number of Travellers</th>
                         <th scope="col">Payment Method</th>
                         <th scope="col">Status</th>
@@ -25,6 +26,7 @@
                         <td>{{this.packageName}}</td>
                         <td>{{this.address.name}}</td>
                         <td>{{this.totalAmount}}</td>
+                        <td>{{this.travelDate}}</td>
                         <td>{{this.persons}}</td>
                         <td>{{this.paymentMethod}}</td>
                         <td>{{this.status}}</td>
