--- a/views/admin/expired-packages.hbs
+++ b/views/admin/expired-packages.hbs
@@ -17,6 +17,7 @@
             <th scope="col">Category</th>
             <th scope="col">Description</th>
             <th scope="col">Date</th>
+            <th scope="col">Expiry Date</th>
             <th scope="col">Price</th>
             <th scope="col">Image</th>
             <th scope="col">Edit</th>
@@ -32,6 +33,7 @@
             <td>{{this.Category}}</td>
             <td>{{this.Description}}</td>
             <td>{{this.Date}}</td>
+            <td>{{this.expiryDate}}</td>
             <td>&#x20b9 {{this.Price}}</td>
             <td><img style="width:50px;height:50px" src="/package-images/{{this._id}}.jpg" alt="" /></td>
             {{#if this.expired}}
