--- a/views/user/bookedPkgDetails.hbs
+++ b/views/user/bookedPkgDetails.hbs
@@ -202,12 +202,13 @@
                     {{#each reviews}}
                     <!-- The result is based on the 'data-rating' value. Change the value to see the different static rating. -->
                     <br>
-                    <div class="reviews" style="background-color:white;border:3px groove grey">
+                    <div class="reviews  mt-3 ml-2 review-toggle" style="box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;width:90%">
                       <h3 class="ml-1">{{this.title}}</h3>
                       <h3 class="ml-1">{{this.name}}</h3>
                       <p class="starability-result" data-rating="{{this.rating}}">
                       </p>
-                      <p class="ml-1">{{this.review}}</p>
+                      <p class="ml-1 read-comment">{{this.review}}</p>
+                      <button class="mb-3 " onclick="readMore(this)">Read More</button><br>
                       <img src="/review-images/{{this._id}}.jpg" class="ml-1 mb-1" style="width:150px;">
                     </div>
                     {{/each}}
@@ -357,4 +358,27 @@
     })
   })
 
+</script>
+
+<script>
+  let noOfChar = 150;
+  let contents = document.querySelectorAll(".read-comment")
+  
+  Array.from(contents).forEach(content =>{
+    //checking if comment is greater than no of char
+    if(content.textContent.length < noOfChar){
+      content.nextElementSibling.style.display = "none";
+    }else{
+      let displayText = content.textContent.slice(0,noOfChar);
+      let moreText =content.textContent.slice(noOfChar)
+      content.innerHTML = `${displayText}<span class="dots">...</span><span class="hide 
+      more">${moreText}</span>`
+    }
+  });
+  function readMore(btn){
+    let post = btn.parentElement;
+    post.querySelector(".dots").classList.toggle("hide");
+    post.querySelector(".more").classList.toggle("hide");
+    btn.textContent == "Read More" ? btn.textContent = "Read Less" : btn.textContent = "Read More"
+  }
 </script>
