--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -46,9 +46,9 @@
     </div>
     <div class="container mt-5">
         <form id="checkout-form">
-            <div class="row">
+            <div class="row ">
                 {{#each address}}
-                <div class="col-md-4">
+                <div class=" col-6 col-md-2">
                     <h2 style="color:white ;">Enter Your Address</h2><br>
                     {{#if this.address}}
                     {{#each this.address}}
@@ -59,7 +59,7 @@
                             <label for="" style="color:white ;">Traveller 1</label><br>
                             <input type="text" id="name" name="name" value="{{this.Name}}">
                         </div>
-                        <div id="newInput" style="color:white;margin-left : 8rem"></div>
+                      
                         <div class="form-group">
                             <label for="" style="color:white ;">House</label><br>
                             <input type="text" id="house" name="house" value="{{this.House}}">
@@ -95,9 +95,6 @@
                             <label for="" style="color:white ;">Traveller 1</label><br>
                             <input type="text" id="name" name="name" value="{{this.Name}}">
                         </div>
-                        <div id="newInput" style="color:white ;">
-
-                        </div>
                         <div class="form-group">
                             <label for="" style="color:white ;">House</label><br>
                             <input type="text" id="house" name="house" value="{{this.House}}">
@@ -129,8 +126,8 @@
 
 
                 </div>
-                <div class="col-md-4">
-                    <div id="newInput" style="color:white;margin-left : 8rem"></div>
+                <div class=" col-2 col-md-4 ml-2">
+                    <div id="newInput"  style="color:white;margin-right:5rem;margin-top:6rem"></div>
                 </div>
             
                 {{/each}}
