design modifications added

--- a/views/partials/user-footer.hbs
+++ b/views/partials/user-footer.hbs
@@ -19,7 +19,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="/user-favorites">Favorites</a></li>
             <li><a href="/user-bookings">Bookings</a></li>
-            <li><a href="#">Contact Us</a></li>
+            
 
           </ul>
         </div>
@@ -46,12 +46,12 @@
       </div>
       <div class="col-sm-6 col-12">
         <!-- Social Icons -->
-        <ul class="social-media-icons text-right">
+        {{!-- <ul class="social-media-icons text-right">
           <li><a class="fa fa-facebook" href="#" target="_blank"></a></li>
           <li><a class="fa fa-twitter" href="#" target="_blank"></a></li>
           <li><a class="fa fa-pinterest-p" href="#" target="_blank"></a></li>
           <li><a class="fa fa-vimeo" href="#"></a></li>
-        </ul>
+        </ul> --}}
       </div>
     </div>
   </div>
