--- a/views/user/searchResults.hbs
+++ b/views/user/searchResults.hbs
@@ -161,7 +161,7 @@
 
 
 
-    <section class="call-to-action overly bg-3 section-sm">
+    {{!-- <section class="call-to-action overly bg-3 section-sm">
         <!-- Container Start -->
         <div class="container">
             <div class="row justify-content-md-center text-center">
@@ -178,7 +178,7 @@
             </div>
         </div>
         <!-- Container End -->
-    </section>
+    </section> --}}
 </div>
 <script>
     jQuery('#searchBar2').validate({
