--- a/views/user/user-view-packages.hbs
+++ b/views/user/user-view-packages.hbs
@@ -173,7 +173,7 @@
 
 
 
-  <section class="call-to-action overly bg-3 section-sm">
+  {{!-- <section class="call-to-action overly bg-3 section-sm">
     <!-- Container Start -->
     <div class="container">
       <div class="row justify-content-md-center text-center">
@@ -188,7 +188,7 @@
       </div>
     </div>
     <!-- Container End -->
-  </section>
+  </section> --}}
 </div>
 <script>
   jQuery('#searchBar').validate({
